--- a/.github/workflows/dottorrent-cli.yml
+++ b/.github/workflows/dottorrent-cli.yml
@@ -5,19 +5,19 @@ on:
       name:
         description: Name of the torrent file
         required: true
-        default: Firefox Setup 95.0.1
+        default: autocad2021_unk0
       comment:
         description: Comment
         required: true
-        default: Firefox Setup 95.0.1 win64 en-US by torrent-webseed-creator
+        default: autocad2021 win64 en-US byunk0
       url:
         description: URL of the file
         required: true
-        default: 'https://download-installer.cdn.mozilla.net/pub/firefox/releases/95.0.1/win64/en-US/Firefox%20Setup%2095.0.1.exe'
+        default: 'https://download2390.mediafire.com/p9ant93tuq3g/2j2wpc4ucjxfad6/WIN_ACD_2K21_AP_ZNT.rar'
       file_name:
         description: File name of the file in the torrent
         required: true
-        default: Firefox Setup 95.0.1.exe
+        default: WIN_ACD_2K21_AP_ZNT.rar
       maximize_disk_space:
         description: Maximize disk space. Set to true if getting out of disk space error
         default: false
